# ChangeLog for eclass directory
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Jun 2012; Martin Väth <martin@mvath.de>
  Remove support for icecat. Fix headers to make repoman happy.

  12 May 2012; Martin Väth <martin@mvath.de>
  base->eutils

  12 May 2012; Martin Väth <martin@mvath.de>
  Created ChangeLog
