@@ -1,2 +1,2 @@
-copy_extensions - Copy extensions for each firefox/seamonkey separately instead of using hardlinks. This may be necessary if you have e.g. /opt and /usr on different partitions or if cp -RPl is not supported by your system.
-symlink_extensions - Use symlinks for extensions of firefox/seamonkey instead of hardlinks or copies. This may require to remove ~/.mozilla/*/*/extensions.ini at each restart of the browser.
+copy-extensions - Copy extensions for each firefox/seamonkey separately instead of using hardlinks. This may be necessary if you have e.g. /opt and /usr on different partitions or if cp -RPl is not supported by your system.
+symlink-extensions - Use symlinks for extensions of firefox/seamonkey instead of hardlinks or copies. This may require to remove ~/.mozilla/*/*/extensions.ini at each restart of the browser.
