@@ -1,1 +1,1 @@
-DIST squash_dir-11.11.tar.gz 26085 SHA256 094b5dbde4b13baad2b72de680e9e7a16c534d4a685dd8286cded25c608af37a SHA512 9947c5ba2ff2514eeab3976bb2d5e37f2313c27397e28346c6779fb80c97009a8ff6717e0593d8a2ef3c179c644b474069e574185dbcc38ad692374714bfb3f6 WHIRLPOOL 2087afdb56026cb22d0cc3a646b51f733525983e6a750a5394fd7959e3ce8be2ad7215b54c37eee1abff146e857340b3b39b341aa958a06844eef39f6ae980d4
+DIST squash_dir-11.12.tar.gz 26169 SHA256 f974cfe9264758c9235cb3b788479fa2a83c677567714e0f86874eea7bdd561c SHA512 ac959d429923c7d492c3f8ee13d24b1803f1e0a525e7e5dbeafffd7fbb194b51cc3759481a7d3492ff5f9942f18a6a2b18da16f756d24e160bfe080c90f84218 WHIRLPOOL d0e5e045018668bbe2e4abfb6c824117a4e499042c6f9ce6e6ee26c0d4c8c27bd7a56066d3b77f7d9c0c39d7f0e37d930b6bb64ce96752b38362da6cea10701c
