@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*squash_dir-11.12 (26 Aug 2012)
+
+  26 Aug 2012; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild. Support overlayfs (untested)
+
 *squash_dir-11.11 (29 Jul 2012)
 
   29 Jul 2012; Martin Väth <martin@mvath.de>
